# advent-of-code-2021

./: pyproject.toml
.github/workflows/: python-app.yml
advent-of-code-2021/day_1/: day_1.py  test_day_1.py
advent-of-code-2021/day_10/: day_10.py  test_day_10.py
advent-of-code-2021/day_2/: day_2.py  test_day_2.py
advent-of-code-2021/day_3/: day_3.py  test_day_3.py
advent-of-code-2021/day_4/: day_4.py  test_day_4.py
advent-of-code-2021/day_5/: day_5.py  test_day_5.py
advent-of-code-2021/day_6/: day_6.py  test_day_6.py
advent-of-code-2021/day_7/: day_7.py  test_day_7.py
advent-of-code-2021/day_8/: day_8.py  test_day_8.py
advent-of-code-2021/day_9/: day_9.py  test_day_9.py
